--- a/src/rating-button/rating-button.module.css
+++ b/src/rating-button/rating-button.module.css
@@ -1,24 +1,23 @@
 .ratingStyle {
-    background-color: #384656;
-    border-radius: 25px;
-    padding: 14px 20px;
-    color: hsl(217, 12%, 63%);
-    border: transparent;
-    font-family: 'Overpass', sans-serif;
-    font-weight: 700;
+  background-color: #384656;
+  border-radius: 25px;
+  padding: 14px 20px;
+  color: hsl(217, 12%, 63%);
+  border: transparent;
+  font-family: "Overpass", sans-serif;
+  font-weight: 700;
 }
 
 .ratingStyle:hover {
-    cursor: pointer;
-    background-color: hsl(25, 97%, 53%);
-    color: hsl(0, 0%, 100%);
+  cursor: pointer;
+  background-color: hsl(25, 97%, 53%);
+  color: hsl(0, 0%, 100%);
 }
 
 .selection {
-    color: hsl(25, 97%, 53%);
-    background-color: #384656;
-    border-radius: 20px;
-    padding: 5px 15px;
-    margin: 30px 0;
+  color: hsl(25, 97%, 53%);
+  background-color: #384656;
+  border-radius: 20px;
+  padding: 5px 15px;
+  margin: 30px 0;
 }
-
